# fmapi_mcp

./: README.md  pyproject.toml
fmapi_mcp/: __init__.py  auth.py  client.py  files.py  server.py  tools.py
tests/: __init__.py  smoke_test.py  test_files.py  test_tools.py
