[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmapi-mcp"
version = "0.1.0"
description = "MCP server exposing Databricks FMAPI endpoints to Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "databricks-sdk>=0.20.0",
    "openai>=1.0.0",
]

[project.scripts]
fmapi-mcp = "fmapi_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
